[package]
name = "client"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
hashbrown = "0.14.3"
num = "0.4.1"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = { version = "0.12.2", features = ["blocking", "json", "rustls-tls"], default-features = false }
ron = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
